# VertexEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  vendor.yml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: main.yml  main_fork.yml
SandBox/: CMakeLists.txt
SandBox/res/shaders/: shader.frag  shader.vert
SandBox/src/: Application.cpp  Application.h
Toolbox/: CMakeLists.txt  hexprint.c
Vertex/: CMakeLists.txt
Vertex/include/: Vertex.h
Vertex/src/: Application.cpp  Application.h  Core.h
Vertex/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Window.cpp  Window.h  WindowImplGLFW.cpp  vx_pch.h
Vertex/src/Core/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Vertex/src/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Vertex/src/Core/Renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
Vertex/src/Core/Time/: Time.h  TimeDelta.h
Vertex/src/GL/: Buffer.cpp  Buffer.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsContext.cpp  GraphicsContext.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Vertex/src/GL/DirectX11/: DirectX11Context.h
Vertex/src/GL/DirectX12/: DirectX12Context.cpp  DirectX12Context.h
Vertex/src/GL/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLGraphicsAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniform.cpp  OpenGLUniform.h  OpenGLUniformPack.cpp  OpenGLUniformPack.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Shader.cpp  Shader.h
Vertex/src/GL/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanBufferBinding.h  VulkanContext.cpp  VulkanContext.h  VulkanExtensions.cpp  VulkanExtensions.h  VulkanGraphicsAPI.cpp  VulkanGraphicsAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanShaderPipeline.cpp  VulkanShaderPipeline.h  VulkanVertexArray.cpp  VulkanVertexArray.h
Vertex/src/GUI/: GUILayer.cpp  GUILayer.h
Vertex/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Vertex/src/Logger/: Logger.cpp  Logger.h
Vertex/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.h
Vertex/src/Window/: Input.cpp  Input.h  Window.cpp  Window.h
Vertex/src/Window/Linux/: LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Vertex/src/Window/Windows/: WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
res/shaders/test/: test.frag  test.vert
scripts/: build-vk.sh  build.bat  build.sh
